# job_search_analytics

./: .gitignore  README.md  all_ids.txt  analytics.ipynb  extract_jobs.py  job-tracker-updater.skill  job_applications_backup.csv  job_applications_final.csv  pyproject.toml  update_tracker.py
.gemini/skills/job-tracker-updater/: SKILL.md
