[project]
name = "job-search-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "ollama>=0.6.2",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "seaborn>=0.13.2",
]
